--- a/non-nvidia/playbook.yml
+++ b/non-nvidia/playbook.yml
@@ -94,6 +94,11 @@
       register: font_cache_rebuilt
       tags: user_env
 
+    - name: Clone copilot.vim repository
+      git:
+        repo: https://github.com/github/copilot.vim
+        dest: ~/.config/nvim/pack/github/start/copilot.vim
+
     # Reboot system
     - name: Reboot the system
       command: "systemctl reboot"
