--- a/playbook.yml
+++ b/playbook.yml
@@ -22,33 +22,31 @@
         - org.gnome.Boxes
       tags: packages
 
-    # System configuration
-    - name: Set Timezone to Europe/London
-      timezone:
-        name: Europe/London
-      become: yes
-      become_user: root
-      tags: system
-
     # User environment configuration
     - name: Check if powerlevel10k directory exists
       stat:
-        path: "~/powerlevel10k"
+        path: ~/powerlevel10k
       register: powerlevel10k_directory
       tags: user_env
 
     - name: Clone powerlevel10k repository
       git:
-        repo: "https://github.com/romkatv/powerlevel10k.git"
-        dest: "~/powerlevel10k"
+        repo: https://github.com/romkatv/powerlevel10k.git
+        dest: ~/powerlevel10k
         depth: 1
       when: not powerlevel10k_directory.stat.exists
       tags: user_env
 
-    - name: Clone copilot.vim repository
+    - name: Check if copilot.vim repository is already cloned
+      stat:
+        path: ~/.config/nvim/pack/github/start/copilot.vim
+      register: copilot_repo_status
+
+    - name: Clone copilot.vim repository if not present
       git:
         repo: https://github.com/github/copilot.vim
         dest: ~/.config/nvim/pack/github/start/copilot.vim
+      when: not copilot_repo_status.stat.exists
 
     - name: Check current shell
       command: echo $SHELL
@@ -62,6 +60,7 @@
         name: "{{ lookup('env','USER') }}"
         shell: /usr/bin/zsh
       when: current_shell.stdout != '/usr/bin/zsh'
+      register: shell_changed
       tags: user_env
 
     - name: Check if the fonts directory exists
@@ -99,6 +98,14 @@
       register: font_cache_rebuilt
       tags: user_env
 
+    # System configuration
+    - name: Set Timezone to Europe/London
+      timezone:
+        name: Europe/London
+      become: yes
+      become_user: root
+      tags: system
+
     - name: Check for Nvidia GPU
       set_fact:
         has_nvidia_gpu: "{{ 'nvidia' in item.model | lower }}"
@@ -119,6 +126,9 @@
     # Reboot system
     - name: Reboot the system
       command: "systemctl reboot"
-      when: font_cache_rebuilt is changed
+      when: 
+        - font_cache_rebuilt is changed
+        - shell_changed is changed
+        - nvidia_driver_installed is changed
       tags: reboot
 ...
