Add Black PIP module

--- a/playbook.yml
+++ b/playbook.yml
@@ -102,6 +102,7 @@
           - pynvim
           - flake8
           - pylint
+          - black
         state: present
         executable: pip3
 
