--- a/playbook.yml
+++ b/playbook.yml
@@ -123,7 +123,7 @@
       when: hadolint_exists.rc != 0
 
     - name: Install shfmt
-      shell: GO111MODULE=on go install mvdan.cc/sh/v3/cmd/shfmt@latest
+      shell: GO111MODULE=on /usr/lib/golang/bin/go install mvdan.cc/sh/v3/cmd/shfmt@latest
       args:
         executable: /bin/bash
 
@@ -202,20 +202,23 @@
       become_user: root
       tags: system
 
-    - name: Check for Nvidia GPU
+    - name: Check for Nvidia GPU using lspci
+      shell: lspci | grep -i NVIDIA
+      register: lspci_check
+      failed_when: false
+      changed_when: false
+
+    - name: Set has_nvidia_gpu fact based on lspci output
       set_fact:
-        has_nvidia_gpu: "{{ 'nvidia' in item.model | lower }}"
-      loop: "{{ ansible_facts['devices'].values() }}"
-      when: "'nvidia' in item.model | lower"
-      register: gpu_check_results
+        has_nvidia_gpu: "{{ lspci_check.stdout != '' }}"
 
     - name: Install Nvidia driver
       shell: "rpm-ostree install akmod-nvidia"
       become: yes
       become_user: "{{ lookup('env','USER') }}"
       when: 
+        - has_nvidia_gpu
         - font_cache_rebuilt is changed
-        - gpu_check_results.results | selectattr('ansible_facts.has_nvidia_gpu', 'defined') | list | length > 0
       register: nvidia_driver_installed
       tags: nvidia
 
@@ -225,6 +228,5 @@
       when: 
         - font_cache_rebuilt is changed
         - shell_changed is changed
-        - nvidia_driver_installed is changed
       tags: reboot
 ...
